--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "cSpell.words": ["electronmon", "Matteo", "Mazzarolo", "wildcatweb"]
+    "cSpell.words": [
+        "characteristicvaluechanged",
+        "electronmon",
+        "jexp",
+        "Matteo",
+        "Mazzarolo",
+        "nsis",
+        "runloop",
+        "wildcatweb"
+    ]
 }
