--- a/wildcatweb/package.json
+++ b/wildcatweb/package.json
@@ -10,9 +10,13 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.7.7",
+        "buffer": "^6.0.3",
+        "crc-32": "^1.2.2",
         "react": "^18.3.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.3.1",
-        "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -71,6 +75,7 @@
         "electron": "^33.2.0",
         "electron-builder": "^25.1.8",
         "electronmon": "^2.0.3",
+        "react-scripts": "5.0.1",
         "wait-on": "^8.0.1"
     }
 }
