--- a/wildcatweb/package.json
+++ b/wildcatweb/package.json
@@ -12,11 +12,13 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.7",
         "buffer": "^6.0.3",
+        "buffer-layout": "^1.2.2",
         "crc-32": "^1.2.2",
         "react": "^18.3.1",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.3.1",
+        "struct-js": "^1.1.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
