--- a/wildcatweb/package.json
+++ b/wildcatweb/package.json
@@ -14,6 +14,7 @@
         "buffer": "^6.0.3",
         "buffer-layout": "^1.2.2",
         "crc-32": "^1.2.2",
+        "lucide-react": "^0.469.0",
         "react": "^18.3.1",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
